--- a/styles/style.css
+++ b/styles/style.css
@@ -58,3 +58,27 @@ textarea{
     background-position: center;
    
 }
+
+.div{
+    border: 1px solid rgb(10, 0, 0);
+    margin: 2px;
+}
+
+table{
+    border-collapse: collapse;
+    border: 1px solid black;
+    margin: 2px;
+    width: 100%;
+    background-color: bisque;
+}
+
+th,td{
+    border: 2px solid black;
+    padding: 20px;
+    margin: 20px;
+}
+
+.row3 td{
+    font-weight: bold;
+}
+
